examples/test/testpolicy18660.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18660
  namespace: namespace378
spec:
  podSelector:
    matchLabels:
      key35: value17
      key2: value22
      key22: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value11
          key37: value26
          key7: value1
      podSelector:
        matchLabels:
          key38: value47
          key26: value10
          key25: value49
